--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prod": "NODE_ENV=production node index.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tables": "psql -d qa -f db/schema.sql",
